Add user, Login, User

--- a/my-app/src/Screens/Login/login.css
+++ b/my-app/src/Screens/Login/login.css
@@ -2,7 +2,7 @@
   height: 650px;
 }
 .color {
-  background-color: #727cf5;
+  background-color: #ffe9e7;
 }
 .form-check-input:checked {
   background-color: #727cf5 !important ;
